fixed spacing for mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ html {
 }
 
 .mobile-sidebar {
-  @apply fixed overflow-x-hidden h-screen w-0 top-0 right-0 pt-24 bg-red-800 z-20;
+  @apply fixed overflow-x-hidden h-screen w-0 top-0 right-0 pt-24 bg-red-800 shadow-2xl z-20;
 }
 
 .navlink {
